# ComicFeed

./: .dockerignore  .gitignore  CONTEXT.md  ComicInfo.xml  Dockerfile  LICENSE  README.md  _dl_test.py  _eh_search.html  debug_exh_search_1.html  debug_exhentai_next_url.html  docker-compose.yml  main.py  pyproject.toml
.claude/: settings.local.json
comicfeed/: cbz.py  config.py  credentials.py  database.py  dedup.py  detect_ad.py  downloader.py  hooks.py  komga.py  log.py  models.py  notifications.py  scheduler.py  source_manager.py  tag_translator.py
comicfeed/data/: eh_tags.db.json  eh_tags.json  nhentai_tags.json
comicfeed/infrastructure/: config.py  database.py  gallery_cache.py  http_retry.py  log.py  notifications.py  scheduler.py  tag_translator.py
comicfeed/io/: cbz.py  cbz_builder.py  detect_ad.py  page_fetcher.py
comicfeed/repositories/: gallery.py  page.py
comicfeed/services/: dedup.py  download.py  notification.py  queue.py  subscription.py
comicfeed/sources/: base.py  exhentai.py  nhentai.py  nhentai_tags.py
comicfeed/web/: app.py
docs/: testing-checklist.md
docs/adr/: 0001-source-plugin-model.md  (+2 more)
tests/: conftest.py  test_cbz.py  test_config.py  test_credentials.py  test_database.py  test_dedup.py  test_detect_ad.py  test_downloader.py  test_exhentai.py  test_exhentai_update.py  test_gallery_api.py  test_hooks.py  test_models.py  test_nhentai.py  test_notifications.py  test_queue.py  test_scheduler.py  test_smoke.py  test_sources.py  test_tags.py  test_web.py
tools/: dedup.py  fix_comicinfo_number.py  komga_cleanup.py  post_download.py
(+20 files in other folders)
